[package]
name = "renvsubst"
version = "0.4.14"
edition = "2021"
authors = ["gi8@containeroo.ch"]
categories = ["command-line-utilities"]
description = "Envsubst with some extra features written in Rust"
repository = "https://github.com/containeroo/renvsubst"
license = "MIT"

[dev-dependencies]
tempfile = "*"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
panic = "abort"
codegen-units = 1
incremental = false
overflow-checks = true
strip = true

[target.x86_64-unknown-linux-gnu]
rustflags = [
  "-C", "target-feature=+crt-static",
  "-C", "link-arg=-static",
  "-C", "link-arg=-s",
]

[target.aarch64-unknown-linux-gnu]
rustflags = [
  "-C", "target-feature=+crt-static",
  "-C", "link-arg=-static",
  "-C", "link-arg=-s",
]
